feat: enhance API authentication and routing in Nginx configuration (#165)
- Added a dedicated location for MCP API requests that bypass session authentication and utilize API Key authentication.
- Updated the auth_handler.lua to extract API Key from query parameters if no session token is present, supporting both MCP and other API Key authentication methods.

--- a/docker/volumes/nginx/default.conf
+++ b/docker/volumes/nginx/default.conf
@@ -96,6 +96,21 @@ server {
     }
 
     # openapi-service 路由
+    # MCP 专用 location - 同时处理带/不带斜杠的请求
+    location ~ ^/api/rpa-openapi/mcp/?$ {
+        # MCP 接口跳过会话认证，使用 API Key 认证
+        # API Key 在查询参数中传递：?key=xxx
+        # 支持以下格式：
+        # - /api/rpa-openapi/mcp?key=xxx
+        # - /api/rpa-openapi/mcp/?key=xxx
+        
+        rewrite ^/api/rpa-openapi/mcp/?(.*)$ /mcp/$1 break;
+        proxy_pass http://openapi-service;
+        proxy_connect_timeout 600s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+    }
+
     # WebSocket 专用 location
     location /api/rpa-openapi/ws {
         # 为 WebSocket 认证设置上下文类型
@@ -110,7 +125,8 @@ server {
         rewrite ^/api/rpa-openapi/(.*)$ /$1 break;
         proxy_pass http://openapi-service;
     }
-    # 通用 API location
+
+    # 通用 API location - 需要会话认证
     location /api/rpa-openapi/ {
         access_by_lua_file lua/auth_handler.lua; # 调用外部 Lua 认证脚本
 
