--- a/engine/servers/astronverse-scheduler/pyproject.toml
+++ b/engine/servers/astronverse-scheduler/pyproject.toml
@@ -18,9 +18,7 @@ dependencies = [
     "pyautogui",
     "pywin32; sys_platform == 'win32'",
     "PyQt5; sys_platform == 'linux'",
-    "python-lsp-server",
-#    "python-lsp-server[pyflakes]",
-#    "python-lsp-server[mccabe]",
+    "python-lsp-server[pyflakes,mccabe]",
 ]
 
 [tool.uv.sources]
