--- a/engine/servers/astronverse-picker/pyproject.toml
+++ b/engine/servers/astronverse-picker/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "astronverse-picker"
-version = "1.0.1"
+version = "1.0.2"
 description = "astronverse-picker."
 requires-python = ">=3.13"
 
@@ -14,10 +14,11 @@ dependencies = [
     "requests",
     "pyautogui",
     "pandas",
+    "beautifulsoup4",
     "pyWinhook; sys_platform == 'win32'",
     "pywin32; sys_platform == 'win32'",
     "uiautomation; sys_platform == 'win32'",
-    "pythonnet; sys_platform == 'win32'"
+    "pythonnet; sys_platform == 'win32'",
 ]
 
 [tool.uv.sources]
