feat(docker): add Atlas service configuration and update environment variables (#213)
- Introduced a new Atlas service in docker-compose.yml for schema management.
- Updated .env.example to include Atlas connection URLs for MySQL.
- Ensured Atlas service depends on MySQL being healthy before execution.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -23,7 +23,8 @@ DATABASE_PASSWORD="rpa123456"
 DATABASE_HOST="rpa-opensource-mysql"
 DATABASE_PORT=3306
 DATABASE_NAME="rpa"
-ATLAS_URL=""
+ATLAS_URL=mysql://root:rpa123456@rpa-opensource-mysql:3306/rpa?charset=utf8mb4&parseTime=True
+ATLAS_HOST_URL=mysql://root:rpa123456@localhost:3306/rpa?charset=utf8mb4&parseTime=True
 
 # Redis
 REDIS_HOST="rpa-opensource-redis"
