chore: update documentation and dependencies for openapi-service (#219)
- Removed outdated migration steps from FAQ.md.
- Added 'rpawebsocket' as a new dependency in pyproject.toml and updated uv.lock.
- Revised installation and configuration steps in README.md and README.zh.md for clarity and consistency.
- Renumbered sections in README files to reflect the updated order of operations.

--- a/backend/openapi-service/pyproject.toml
+++ b/backend/openapi-service/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "redis[hiredis]>=6.1.0",
     "sqlalchemy>=2.0.41",
     "pytz",
-    "mcp"
+    "mcp",
+    "rpawebsocket"
 ]
 
 [dependency-groups]
@@ -26,6 +27,9 @@ dev = [
     "pytest-cov>=6.1.1",
     "ruff>=0.11.11",
 ]
+
+[tool.uv.sources]
+rpawebsocket = {path = "./app/utils/rpawebsocket-1.0.6-py3-none-any.whl"}
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
